# PI-LEIC

./: .gitignore  README.md  agent.md  agent.py  pyproject.toml  requirements-dev.txt  requirements.txt  ue_zmq.conf.txt
.github/workflows/: ci.yml
D1/: DesenhoSolução.md  DesenhoSolução2.md  diagrama-componentes.puml  diagrama-sequencia.puml
agent/: README.md  agent.py
config/: gnb_gnb1_zmq.yaml  gnb_gnb2_zmq.yaml  gnb_zmq.yaml  metrics_sources.json  subscribers.json  ue1_zmq.conf.txt  ue2_zmq.conf.txt  ue_zmq.conf.txt
config/grafana/: pi-leic-overview.json  prometheus-scrape.yml
src/: __init__.py  api_models.py  dashboard.py  env_utils.py  launch_stack.sh  metrics_api.py  metrics_collector.py  metrics_exporter.py  metrics_identity.py  metrics_liveness.py  metrics_rest_api.py  provision_subscribers.py  validate_stage.sh
src/collector/: __init__.py  config.py  enrichment.py  storage.py  transport.py  worker.py
tests/: test_dashboard_dedupe.py  test_dashboard_import_safe.py  test_env_utils.py  test_freshness_cross_validation.py  test_launch_lib_common.sh  test_launch_lib_core_readiness.sh  test_launch_lib_health_classification.sh  test_launch_lib_journal_helpers.sh  test_launch_lib_metrics_contract.sh  test_launch_lib_process_management.sh  test_launch_lib_root_runtime.sh  test_launch_lib_socket_probes.sh  test_launch_stack_dry_run_rootless.sh  test_metrics_api.py  test_metrics_collector_rotation.py  test_metrics_identity.py  test_metrics_liveness.py  test_metrics_rest_api.py  test_structured_logging.py  test_validate_stage_rootless.sh
(+14 files in other folders)
